Update notebooks using ampltools 0.2.2

--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -46,22 +46,33 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running in a known cloud platform. Skipping.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d8b43f983de4060a10c1f267e034c43",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
-    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
-    "# and rerun this cell before sharing the notebook with anyone.\n",
-    "LICENSE_UUID = None\n",
-    "# You can install individual modules from https://portal.ampl.com/dl/modules/\n",
-    "MODULES = ['ampl', 'gurobi']\n",
-    "# Set to True in order to install AMPL only once \n",
-    "RUN_ONCE = True\n",
-    "import os\n",
-    "from ampltools import ampl_installer, cloud_platform_name\n",
-    "if cloud_platform_name() is not None:\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
-    "    os.environ['PATH'] += os.pathsep + ampl_dir"
+    "# Install AMPL and activate license\n",
+    "from ampltools import ampl_installer_cell\n",
+    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
    ]
   },
   {
@@ -97,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
+      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
       "Demo license with maintenance expiring 20240131.\\\n",
       "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
       "';\n"
@@ -107,9 +118,8 @@
    "source": [
     "ampl = AMPL()\n",
     "ampl.eval('option version;')\n",
-    "# Store %%ampl cells in the list _ampl_cells\n",
     "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
+    "register_magics(ampl_object=ampl)"
    ]
   },
   {
@@ -249,7 +259,7 @@
       "  RHS range        [1e+01, 1e+01]\n",
       "Found heuristic solution: objective 50.0000000\n",
       "Presolve removed 1 rows and 4 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.02s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
       "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
@@ -273,7 +283,7 @@
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    9.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
+      "Solved in 0 iterations and 0.01 seconds (0.00 work units)\n",
       "Optimal objective  9.000000000e+01\n",
       "Gurobi 9.5.0: optimal solution; objective 90\n"
      ]
