--- a/notebooks/pattern_enumeration.ipynb
+++ b/notebooks/pattern_enumeration.ipynb
@@ -48,20 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
-    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
-    "# and rerun this cell before sharing the notebook with anyone.\n",
-    "LICENSE_UUID = None\n",
-    "# You can install individual modules from https://portal.ampl.com/dl/modules/\n",
-    "MODULES = ['ampl', 'gurobi']\n",
-    "# Set to True in order to install AMPL only once \n",
-    "RUN_ONCE = True\n",
-    "import os\n",
-    "from ampltools import ampl_installer, cloud_platform_name\n",
-    "if cloud_platform_name() is not None:\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
-    "    os.environ['PATH'] += os.pathsep + ampl_dir"
+    "# Install AMPL and activate license\n",
+    "from ampltools import ampl_installer_cell\n",
+    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
    ]
   },
   {
@@ -91,9 +80,8 @@
     "from amplpy import AMPL, register_magics\n",
     "ampl = AMPL()\n",
     "ampl.eval('option version;')\n",
-    "# Store %%ampl cells in the list _ampl_cells\n",
     "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
+    "register_magics(ampl_object=ampl)"
    ]
   },
   {
