--- a/notebooks/pattern_tradeoff.ipynb
+++ b/notebooks/pattern_tradeoff.ipynb
@@ -46,22 +46,33 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running in a known cloud platform. Skipping.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4fb9d0ebf4248b7916d9d71aa0e8d62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
-    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
-    "# and rerun this cell before sharing the notebook with anyone.\n",
-    "LICENSE_UUID = None\n",
-    "# You can install individual modules from https://portal.ampl.com/dl/modules/\n",
-    "MODULES = ['ampl', 'gurobi']\n",
-    "# Set to True in order to install AMPL only once \n",
-    "RUN_ONCE = True\n",
-    "import os\n",
-    "from ampltools import ampl_installer, cloud_platform_name\n",
-    "if cloud_platform_name() is not None:\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
-    "    os.environ['PATH'] += os.pathsep + ampl_dir"
+    "# Install AMPL and activate license\n",
+    "from ampltools import ampl_installer_cell\n",
+    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
    ]
   },
   {
@@ -80,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
+      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
       "Demo license with maintenance expiring 20240131.\\\n",
       "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
       "';\n"
@@ -92,9 +103,8 @@
     "from math import floor\n",
     "ampl = AMPL()\n",
     "ampl.eval('option version;')\n",
-    "# Store %%ampl cells in the list _ampl_cells\n",
     "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
+    "register_magics(ampl_object=ampl)"
    ]
   },
   {
@@ -407,6 +417,13 @@
     "for k in sorted(min_waste.keys(), reverse=True):\n",
     "    print('{}\\t{}\\t{:.0f}'.format(k, min_waste[k], min_wastenum[k]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
