--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -46,29 +46,40 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running in a known cloud platform. Skipping.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "403eb95bf9614d27a8104f288a20893c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
-    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
-    "# and rerun this cell before sharing the notebook with anyone.\n",
-    "LICENSE_UUID = None\n",
-    "# You can install individual modules from https://portal.ampl.com/dl/modules/\n",
-    "MODULES = ['ampl', 'coin']\n",
-    "# Set to True in order to install AMPL only once \n",
-    "RUN_ONCE = True\n",
-    "import os\n",
-    "from ampltools import ampl_installer, cloud_platform_name\n",
-    "if cloud_platform_name() is not None:\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
-    "    os.environ['PATH'] += os.pathsep + ampl_dir"
+    "# Install AMPL and activate license\n",
+    "from ampltools import ampl_installer_cell\n",
+    "ampl_installer_cell(modules=['ampl', 'coin'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import, instantiate an ampl object and register jupyter notebook magics"
+    "### Import, instantiate an AMPL object and register jupyter notebook magics"
    ]
   },
   {
@@ -80,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
+      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
       "Demo license with maintenance expiring 20240131.\\\n",
       "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
       "';\n"
@@ -91,9 +102,8 @@
     "from amplpy import AMPL, register_magics\n",
     "ampl = AMPL()\n",
     "ampl.eval('option version;')\n",
-    "# Store %%ampl cells in the list _ampl_cells\n",
     "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
+    "register_magics(ampl_object=ampl)"
    ]
   },
   {
@@ -112,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
+      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
       "Demo license with maintenance expiring 20240131.\\\n",
       "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
       "';\n"
@@ -295,19 +305,19 @@
       "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.004832 seconds\n",
+      "0 nodes, 3 iterations, 0.005102 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002899 seconds\n",
+      "0 nodes, 0 iterations, 0.002512 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.003766 seconds\n",
+      "0 nodes, 0 iterations, 0.003394 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.005317 seconds\n",
+      "0 nodes, 6 iterations, 0.004066 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
