Update notebooks using ampltools 0.2.3

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -46,64 +46,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in a known cloud platform. Skipping.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "403eb95bf9614d27a8104f288a20893c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'coin'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import, instantiate an AMPL object and register jupyter notebook magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
-   "source": [
+    "MODULES=['ampl', 'coin']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
     "from amplpy import AMPL, register_magics\n",
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -115,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
+      "option version 'AMPL Version 20220219 (Darwin-19.6.0, 64-bit)\\\n",
       "Demo license with maintenance expiring 20240131.\\\n",
       "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
       "';\n"
@@ -143,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,29 +247,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.005102 seconds\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective -0.2\n",
+      "0 nodes, 3 iterations, 0.005544 seconds\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002512 seconds\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective -0.2\n",
+      "0 nodes, 0 iterations, 0.002618 seconds\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.003394 seconds\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective -0.1\n",
+      "0 nodes, 0 iterations, 0.003455 seconds\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.004066 seconds\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 0\n",
+      "0 nodes, 6 iterations, 0.004011 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
@@ -341,8 +293,8 @@
       "8   7.5\n",
       ";\n",
       "\n",
-      "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
-      "0 nodes, 0 iterations, 0.003534 seconds\n",
+      "CBC 2.10.5: \b\b\b\b\b\b\b\b\b\b\b\bCBC 2.10.5 optimal, objective 47\n",
+      "0 nodes, 0 iterations, 0.003368 seconds\n",
       "Cut [*] :=\n",
       "1   1\n",
       "2   0\n",
