--- a/notebooks/finance_opt_example_3_1.ipynb
+++ b/notebooks/finance_opt_example_3_1.ipynb
@@ -42,50 +42,16 @@
     "id": "bRmgn-hJi756",
     "outputId": "6745b3a1-77a9-4b86-943f-6652426e2a5e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in a known cloud platform. Skipping.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebcda577d84b4997842d9b546400f63b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'coin'])\n",
-    "\n",
-    "# Import, instantiate an AMPL object and register jupyter notebook magics\n",
+    "MODULES=['ampl', 'coin']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
     "from amplpy import AMPL, register_magics\n",
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -482,11 +448,11 @@
     "dual_values[1] = ampl.get_constraint(\"Liability1\").dual()\n",
     "# Elements from a vector of constraints can be accesed by [] operator\n",
     "for t in range (2, 7):\n",
-    "  dual_values[t] = ampl.get_constraint(\"Liabilities\")[t].dual()\n",
+    "    dual_values[t] = ampl.get_constraint(\"Liabilities\")[t].dual()\n",
     "# Compute rates\n",
     "for t in range (1, 7):\n",
-    "  rate[t] = 1/(dual_values[t])**(1/t)-1\n",
-    "  print(\"Rate\", t, \"=\", rate[t])"
+    "    rate[t] = 1/(dual_values[t])**(1/t)-1\n",
+    "    print(\"Rate\", t, \"=\", rate[t])"
    ]
   }
  ],
