--- a/notebooks/pattern_enumeration.ipynb
+++ b/notebooks/pattern_enumeration.ipynb
@@ -48,40 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import and instantiate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
-   "source": [
+    "MODULES=['ampl', 'gurobi']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
     "from amplpy import AMPL, register_magics\n",
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -93,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 18\n",
       "6 simplex iterations\n",
       "1 branch-and-cut nodes\n"
