--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -46,80 +46,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in a known cloud platform. Skipping.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d8b43f983de4060a10c1f267e034c43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from amplpy import AMPL, register_magics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Instantiate an ampl object and register jupyter magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
-   "source": [
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "MODULES=['ampl', 'gurobi']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
+    "from amplpy import AMPL, register_magics\n",
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -131,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,14 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: outlev=1\n",
       "Set parameter OutputFlag to value 1\n",
       "Set parameter InfUnbdInfo to value 1\n",
@@ -259,10 +194,10 @@
       "  RHS range        [1e+01, 1e+01]\n",
       "Found heuristic solution: objective 50.0000000\n",
       "Presolve removed 1 rows and 4 columns\n",
-      "Presolve time: 0.02s\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.00 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 90 50 \n",
@@ -283,7 +218,7 @@
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    9.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 0 iterations and 0.01 seconds (0.00 work units)\n",
+      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
       "Optimal objective  9.000000000e+01\n",
       "Gurobi 9.5.0: optimal solution; objective 90\n"
      ]
