--- a/notebooks/pattern_generation.ipynb
+++ b/notebooks/pattern_generation.ipynb
@@ -46,65 +46,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in a known cloud platform. Skipping.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b36490ef7f946119a770512d89d0be7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import and instantiate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
-   "source": [
+    "MODULES=['ampl', 'gurobi']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
     "from amplpy import AMPL, register_magics\n",
-    "from math import floor\n",
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -116,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,10 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import floor\n",
     "# Send scalar values\n",
     "ampl.getParameter('overrun').set(overrun)\n",
     "ampl.getParameter('nPatterns').set(len(widths))\n",
@@ -226,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,53 +265,43 @@
      "output_type": "stream",
      "text": [
       "Master problem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 20.44444444\n",
       "\n",
       "Subproblem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.152777778\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 18.77777778\n",
       "1 simplex iterations\n",
       "\n",
       "Subproblem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.111111111\n",
       "\n",
       "Master problem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 18.375\n",
       "3 simplex iterations\n",
       "\n",
       "Subproblem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.125\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 17.95833333\n",
       "5 simplex iterations\n",
       "\n",
       "Subproblem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.041666667\n",
       "2 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 17.94117647\n",
       "5 simplex iterations\n",
       "\n",
       "Subproblem:\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
@@ -398,14 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 19\n",
       "5 simplex iterations\n",
       "1 branch-and-cut nodes\n",
