--- a/notebooks/pattern_tradeoff.ipynb
+++ b/notebooks/pattern_tradeoff.ipynb
@@ -46,65 +46,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in a known cloud platform. Skipping.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4fb9d0ebf4248b7916d9d71aa0e8d62",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Use demo license', style=ButtonStyle()), Password(descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Install AMPL and activate license\n",
-    "from ampltools import ampl_installer_cell\n",
-    "ampl_installer_cell(modules=['ampl', 'gurobi'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import and instantiate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option version 'AMPL Development Version 20220221 (Darwin-19.6.0, 64-bit)\\\n",
-      "Demo license with maintenance expiring 20240131.\\\n",
-      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
-      "';\n"
-     ]
-    }
-   ],
-   "source": [
+    "MODULES=['ampl', 'gurobi']\n",
+    "from ampltools import cloud_platform_name, ampl_notebook\n",
     "from amplpy import AMPL, register_magics\n",
-    "from math import floor\n",
-    "ampl = AMPL()\n",
-    "ampl.eval('option version;')\n",
-    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
-    "register_magics(ampl_object=ampl)"
+    "if cloud_platform_name() is None:\n",
+    "    ampl = AMPL() # Use local installation of AMPL\n",
+    "else:\n",
+    "    ampl = ampl_notebook(modules=MODULES) # Install AMPL and use it\n",
+    "register_magics(ampl_object=ampl) # Evaluate %%ampl_eval cells with ampl.eval()"
    ]
   },
   {
@@ -116,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,14 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 20\n",
       "3 simplex iterations\n",
       "1 branch-and-cut nodes\n",
@@ -206,14 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 15.62\n",
       "2 simplex iterations\n",
       "1 branch-and-cut nodes\n",
@@ -237,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,14 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 20\n",
       "7 simplex iterations\n",
       "1 branch-and-cut nodes\n"
@@ -337,30 +285,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 46.72\n",
       "4 simplex iterations\n",
       "1 branch-and-cut nodes\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 46.72\n",
       "4 simplex iterations\n",
       "1 branch-and-cut nodes\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 47.89\n",
       "4 simplex iterations\n",
       "1 branch-and-cut nodes\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 49.16\n",
       "4 simplex iterations\n",
       "1 branch-and-cut nodes\n",
-      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 54.76\n",
       "5 simplex iterations\n",
       "1 branch-and-cut nodes\n"
@@ -395,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
