Fix link and metadata in efficient_frontier.ipynb

--- a/notebooks/efficient_frontier.ipynb
+++ b/notebooks/efficient_frontier.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/efficientfrontier.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/efficient_frontier.ipynb)"
       ],
       "metadata": {
         "id": "xDITu8fZTfEj"
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "id": "aKiYKyDUEOyV"
       },
@@ -32,11 +32,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {
-        "id": "JVIEGBHREh59"
+        "id": "JVIEGBHREh59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89ef87af-c9ad-4575-c3ad-eba1daf8a10d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 4.1 MB 5.4 MB/s \n",
+            "\u001b[?25h  Building wheel for ampltools (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install -q amplpy ampltools gspread --upgrade"
       ]
@@ -52,37 +65,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 188,
+          "height": 431,
           "referenced_widgets": [
-            "1e9a6699b540499d986863e89a74f7dc",
-            "d4623ddfb5ac42419e179cf8333ff4e2",
-            "691439b5e0aa4c48b5396ff8c97610e8",
-            "269666e7d2384a808b5b5b88bef4094f",
-            "3ef43f609b72430d94ef4c7812d7d2da",
-            "952faf1bd4d0486bb04e2a6b50d1119a",
-            "47ef2cde16164ff08171adfd17ff9309",
-            "8bfa5e7388c043f3aa032b1a37782942",
-            "e160b4bbfbea4473ab998be84029b98d",
-            "690e4953fbdc4a8e83aaa3f89736fd07",
-            "34ffe8025638490c9bc88fcdee313837",
-            "c3a438fe7ff94244b3deb6a1852b1713",
-            "a9aab4b607d146efba153e185183be7b",
-            "ca37e5a9d30b453194087d080915c99c"
+            "55202111d18446c9bf1327f6a1fc6eaa",
+            "0b006809ac574a4fbfb089855e8ad0aa",
+            "29a3031a99a04d6c974d2f4a50931065",
+            "5815fe2ad4cb4151b5bf51f256869286",
+            "3c22fca45cef45a7ae85ac4ffd12d434",
+            "53468cf6ca0c4bcb98dcfafe77187f43",
+            "ad242b5d3af9422db7c9f5a750ac9361",
+            "7cd4753b896345b4b1e775ea08c31c82",
+            "2aa956ec2c56497481033d4d83e3f7cc",
+            "6be52ca339474af9987b8c9be27e6750",
+            "b0a1a58b9d1b4ae980faafcf89ba1ce6",
+            "7cbf21f509da4b9eac890872b5b7bde3",
+            "b8bcdf01f25f43ff9514e4d6551a69a9",
+            "a1d20057680747999dceebe799a17d53"
           ]
         },
         "id": "QFXXgRbZEon0",
-        "outputId": "d7799f23-ed4e-4cdc-be4f-24d9db316262"
+        "outputId": "c0388b8a-cf25-4437-cf81-96751f0e7f2d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Already installed. Skipping. Set reinstall=True if you want to reinstall.\n",
+            "Downloading: https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz\n",
+            "> /content/ampl.linux-intel64/README (new)\n",
+            "> /content/ampl.linux-intel64/amplkey (new)\n",
+            "> /content/ampl.linux-intel64/amplxl.dll (new)\n",
+            "> /content/ampl.linux-intel64/ampl.env (new)\n",
+            "> /content/ampl.linux-intel64/models (new)\n",
+            "> /content/ampl.linux-intel64/ampl.lic (new)\n",
+            "> /content/ampl.linux-intel64/docs (new)\n",
+            "> /content/ampl.linux-intel64/ampl (new)\n",
+            "> /content/ampl.linux-intel64/leasefingerprint (new)\n",
+            "> /content/ampl.linux-intel64/fingerprint (new)\n",
+            "Downloading: https://portal.ampl.com/dl/modules/cplex-module.linux64.tgz\n",
+            "> /content/ampl.linux-intel64/cplex (new)\n",
+            "> /content/ampl.linux-intel64/docs (replacing)\n",
+            "> /content/ampl.linux-intel64/libcplex2010.so (new)\n",
             "AMPL License:\n"
           ]
         },
@@ -90,7 +117,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1e9a6699b540499d986863e89a74f7dc",
+              "model_id": "55202111d18446c9bf1327f6a1fc6eaa",
               "version_minor": 0,
               "version_major": 2
             },
@@ -123,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {
         "id": "RQJJ0oUNE4G4"
       },
@@ -182,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "metadata": {
         "id": "yCI9AMVFE4B3"
       },
@@ -210,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "id": "pLtarkfFK2Rl"
       },
@@ -247,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {
         "id": "OODUiL4OVEVt"
       },
@@ -270,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {
         "id": "0KxgnB0taV6O"
       },
@@ -301,13 +328,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pYG0mQrWNOwJ",
-        "outputId": "16cbc014-a77a-4467-e46d-37dc753213f5"
+        "outputId": "44083eb0-f50c-488a-8db9-d841c5c65fde"
       },
       "outputs": [
         {
@@ -349,13 +376,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RDpBr66uB8F1",
-        "outputId": "4121d66b-e2d2-49b9-a303-388f051812ea"
+        "outputId": "9b7dc599-bbee-49d9-b52b-f1f88efed61b"
       },
       "outputs": [
         {
@@ -415,14 +442,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
         "id": "-ULeZTu8Oh_Q",
-        "outputId": "ed556284-b5ef-429b-99cb-d22812e7f26a"
+        "outputId": "c1f40d8e-f50c-457c-c267-99c30fa604b0"
       },
       "outputs": [
         {
@@ -452,7 +479,7 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "name": "efficientfrontier.ipynb",
+      "name": "efficient_frontier.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -464,7 +491,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "1e9a6699b540499d986863e89a74f7dc": {
+        "55202111d18446c9bf1327f6a1fc6eaa": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -477,16 +504,16 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_d4623ddfb5ac42419e179cf8333ff4e2",
+            "layout": "IPY_MODEL_0b006809ac574a4fbfb089855e8ad0aa",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_691439b5e0aa4c48b5396ff8c97610e8",
-              "IPY_MODEL_269666e7d2384a808b5b5b88bef4094f",
-              "IPY_MODEL_3ef43f609b72430d94ef4c7812d7d2da"
+              "IPY_MODEL_29a3031a99a04d6c974d2f4a50931065",
+              "IPY_MODEL_5815fe2ad4cb4151b5bf51f256869286",
+              "IPY_MODEL_3c22fca45cef45a7ae85ac4ffd12d434"
             ]
           }
         },
-        "d4623ddfb5ac42419e179cf8333ff4e2": {
+        "0b006809ac574a4fbfb089855e8ad0aa": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -538,7 +565,7 @@
             "left": null
           }
         },
-        "691439b5e0aa4c48b5396ff8c97610e8": {
+        "29a3031a99a04d6c974d2f4a50931065": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -551,15 +578,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_952faf1bd4d0486bb04e2a6b50d1119a",
+            "layout": "IPY_MODEL_53468cf6ca0c4bcb98dcfafe77187f43",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_47ef2cde16164ff08171adfd17ff9309",
-              "IPY_MODEL_8bfa5e7388c043f3aa032b1a37782942"
+              "IPY_MODEL_ad242b5d3af9422db7c9f5a750ac9361",
+              "IPY_MODEL_7cd4753b896345b4b1e775ea08c31c82"
             ]
           }
         },
-        "269666e7d2384a808b5b5b88bef4094f": {
+        "5815fe2ad4cb4151b5bf51f256869286": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -581,11 +608,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_a9aab4b607d146efba153e185183be7b",
+            "layout": "IPY_MODEL_b8bcdf01f25f43ff9514e4d6551a69a9",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "3ef43f609b72430d94ef4c7812d7d2da": {
+        "3c22fca45cef45a7ae85ac4ffd12d434": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -611,11 +638,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_ca37e5a9d30b453194087d080915c99c",
+            "layout": "IPY_MODEL_a1d20057680747999dceebe799a17d53",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "952faf1bd4d0486bb04e2a6b50d1119a": {
+        "53468cf6ca0c4bcb98dcfafe77187f43": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -667,13 +694,13 @@
             "left": null
           }
         },
-        "47ef2cde16164ff08171adfd17ff9309": {
+        "ad242b5d3af9422db7c9f5a750ac9361": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ButtonView",
-            "style": "IPY_MODEL_e160b4bbfbea4473ab998be84029b98d",
+            "style": "IPY_MODEL_2aa956ec2c56497481033d4d83e3f7cc",
             "_dom_classes": [],
             "description": "Use demo license",
             "_model_name": "ButtonModel",
@@ -684,18 +711,18 @@
             "_view_count": null,
             "disabled": false,
             "_view_module_version": "1.5.0",
-            "layout": "IPY_MODEL_690e4953fbdc4a8e83aaa3f89736fd07",
+            "layout": "IPY_MODEL_6be52ca339474af9987b8c9be27e6750",
             "_model_module": "@jupyter-widgets/controls",
             "icon": ""
           }
         },
-        "8bfa5e7388c043f3aa032b1a37782942": {
+        "7cd4753b896345b4b1e775ea08c31c82": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "TextModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "TextView",
-            "style": "IPY_MODEL_34ffe8025638490c9bc88fcdee313837",
+            "style": "IPY_MODEL_b0a1a58b9d1b4ae980faafcf89ba1ce6",
             "_dom_classes": [],
             "description": "UUID:",
             "_model_name": "TextModel",
@@ -709,10 +736,10 @@
             "continuous_update": true,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_c3a438fe7ff94244b3deb6a1852b1713"
+            "layout": "IPY_MODEL_7cbf21f509da4b9eac890872b5b7bde3"
           }
         },
-        "e160b4bbfbea4473ab998be84029b98d": {
+        "2aa956ec2c56497481033d4d83e3f7cc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -728,7 +755,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "690e4953fbdc4a8e83aaa3f89736fd07": {
+        "6be52ca339474af9987b8c9be27e6750": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -780,7 +807,7 @@
             "left": null
           }
         },
-        "34ffe8025638490c9bc88fcdee313837": {
+        "b0a1a58b9d1b4ae980faafcf89ba1ce6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -795,7 +822,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "c3a438fe7ff94244b3deb6a1852b1713": {
+        "7cbf21f509da4b9eac890872b5b7bde3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -847,7 +874,7 @@
             "left": null
           }
         },
-        "a9aab4b607d146efba153e185183be7b": {
+        "b8bcdf01f25f43ff9514e4d6551a69a9": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -899,7 +926,7 @@
             "left": null
           }
         },
-        "ca37e5a9d30b453194087d080915c99c": {
+        "a1d20057680747999dceebe799a17d53": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
